# logistic-equation

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
config/: base.py  config.py  dev.py  model_parameters.py  prediction_settings.py
input/: 1950年からのインドの人口の推移.xlsx  sample.xlsx  インドの人口推移.xlsx  サンプルデータ.xlsx
model/: __init__.py  data_extractor.py  logistic_equation.py  parameter_fitting.py  predictor.py  visualizer.py
output/: india_population_table.md
scripts/analysis/: cli_fit_params.py  logistic_fitting.py  logistic_prediction.py
scripts/analysis/core/: logistic_model.py  numerical_methods.py
scripts/data_conversion/: excel_to_md.py
scripts/data_extraction/: extract_data_from_xlsx.py
scripts/visualization/: plot_fitting.py  plot_forecast.py
