[project]
name = "logistic-equation"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (==2.3.2)",
    "pandas (==2.2.2)",
    "openpyxl (==3.1.2)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "yaspin (>=3.1.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
types-openpyxl = "^3.1.5.20250602"
pandas-stubs = "^2.3.0.250703"

[tool.poetry.scripts]
typecheck = "mypy ."
run = "python main.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# 外部ライブラリの型チェックを無視
[[tool.mypy.overrides]]
module = [
    "yaspin.*",
    "matplotlib.*",
    "openpyxl.*"
]
ignore_missing_imports = true
